example/gateway-api/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: demo
  labels:
    app.kubernetes.io/name: echo
spec:
  selector:
    app.kubernetes.io/name: echo
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  type: ClusterIP
